@@ -1,0 +1,3 @@
+Ward,Aldermanic District,Name,Address,Comments,Handicap Accessible,Latitude,Longitude
+1,16,Glendale Elementary School,"1201 Tompkins Dr Madison, WI (43.058534053250526, -89.31246859534969)",LMC,TRUE,43.05853405,-89.3124686
+,0,Glendale Elementary School,"",LMC,TRUE,0.0,-89.3124686
